core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__delete_statement-3.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"DELETE FROM cpu\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_delete_statement
- pre_visit_delete_from_clause
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_delete_from_clause
- post_visit_delete_statement
- post_visit_statement
