core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__drop_measurement_statement.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"DROP MEASUREMENT cpu\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_drop_measurement_statement
- post_visit_drop_measurement_statement
- post_visit_statement
