core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__explain_statement-2.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"EXPLAIN SHOW MEASUREMENTS\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_explain_statement
- pre_visit_statement
- pre_visit_show_measurements_statement
- post_visit_show_measurements_statement
- post_visit_statement
- post_visit_explain_statement
- post_visit_statement
